--- a/src/app/components/asignacion-fechas/asignacion-fechas.component.html
+++ b/src/app/components/asignacion-fechas/asignacion-fechas.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIsGranted="[ROLES.ADMIN_SGA, ROLES.VICERRECTOR, ROLES.ASESOR_VICE, ROLES.COORDINADOR, ROLES.COORDINADOR_PREGADO, ROLES.COORDINADOR_POSGRADO, ROLES.ASISTENTE_ADMISIONES, ROLES.ADMIN_DOCENCIA, ROLES.ASIS_PROYECTO, ROLES.SEC_DECANATURA, ROLES.DECANO]">
+<mat-card *ngIf="hasRole([ROLES.ADMIN_SGA, ROLES.DOCENTE, ROLES.ESTUDIANTE, ROLES.CONSEJO_CURRICULAR]); else noPermission">
   <mat-card-header>
     <mat-card-title>
       {{ "asignacion_fechas.titulo" | translate }}
@@ -97,3 +97,17 @@
     </div>
   </mat-card-content>
 </mat-card>
+
+<!-- Modal para mostrar cuando el usuario no tiene permisos -->
+<ng-template #noPermission>
+  <div class="modal-overlay" *ngIf="!hasRole([ROLES.ADMIN_SGA, ROLES.DOCENTE, ROLES.ESTUDIANTE, ROLES.CONSEJO_CURRICULAR])">
+    <div class="modal-content">
+      <h2>{{ "definicion_formularios.sin_permisos_titulo" | translate }}</h2>
+      <p>{{ "definicion_formularios.sin_permisos_mensaje" | translate }}</p>
+      <!-- Icono grande de carita triste -->
+      <div class="sad-face-icon">
+        <mat-icon class="sad-icon">sentiment_dissatisfied</mat-icon>
+      </div>
+    </div>
+  </div>
+</ng-template>
