feat: Lógica fecha servidor udistrital/sga_documentacion#471

--- a/src/app/components/definicion-formularios/definicion-formularios.component.html
+++ b/src/app/components/definicion-formularios/definicion-formularios.component.html
@@ -68,3 +68,8 @@
     </div>
   </div>
 </ng-template>
+
+<div>
+  <p>Fecha actual del PC: {{ currentPcDate }}</p>
+  <p>Fecha del encabezado de la API: {{ dateHeader }}</p>
+</div>
